# Azure

./: .gitignore
Azure_RAG/: .gitignore  README.md
Azure_RAG/backend/: .dockerignore  .env.example  Dockerfile  README.md  create_index.py  pyproject.toml
Azure_RAG/backend/src/backend/: __init__.py  config.py  main.py
Azure_RAG/backend/src/backend/api/: dependencies.py
Azure_RAG/backend/src/backend/api/routes/: cache.py  index.py  query.py  upload.py
Azure_RAG/backend/src/backend/models/: __init__.py  entities.py  schemas.py  search_request.py
Azure_RAG/backend/src/backend/services/: __init__.py  blob_service.py  cache_service.py  embedding_service.py  entity_extractor.py  pdf_processor.py  search_service.py
azure_auth_series/: PLAN.md  README.md
chatbot_on_azure/: .gitignore  DEPLOYMENT.md  README.md  SETUP.md
chatbot_on_azure/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
chatbot_on_azure/backend/src/backend/: config.py  main.py
chatbot_on_azure/backend/src/backend/routes/: chat.py
chatbot_on_azure/backend/src/backend/services/: openai_service.py
finance_research_pipeline/: .env.example  README.md  cleanup.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  local-deploy.sh
finance_research_pipeline/backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
finance_research_pipeline/backend/src/backend/: __init__.py  main.py
finance_research_pipeline/backend/src/backend/agents/: __init__.py  analyst.py  financial_data.py  news_analysis.py  reviewer.py  state.py  supervisor.py  web_research.py  writer.py
finance_research_pipeline/backend/src/backend/api/: __init__.py
finance_research_pipeline/backend/src/backend/api/v1/: __init__.py  research.py  sse.py  websocket.py
finance_research_pipeline/backend/src/backend/core/: __init__.py  config.py  dependencies.py  logging.py
finance_research_pipeline/backend/src/backend/graph/: __init__.py  research_graph.py
finance_research_pipeline/backend/src/backend/schemas/: __init__.py  agent.py  research.py
finance_research_pipeline/backend/src/backend/services/: __init__.py  cache.py  cosmos_db.py  llm_factory.py  report_generator.py  websocket_manager.py
finance_research_pipeline/backend/src/backend/tools/: __init__.py  newsapi.py  tavily.py  yfinance_tool.py
fraud_detection/: .gitignore  CLAUDE.md  DEMO.md  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml
fraud_detection/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
fraud_detection/backend/alembic/: env.py
fraud_detection/backend/alembic/versions/: 067a0d7e4996_initial_tables.py  1383a3061ea1_increase_model_version_length.py
fraud_detection/backend/scripts/: generate_transactions.py  load_kaggle_data.py
fraud_detection/backend/src/backend/: main.py
fraud_detection/backend/src/backend/api/v1/: alerts.py  analytics.py  rules.py  transactions.py  websocket.py
fraud_detection/backend/src/backend/core/: config.py  database.py
fraud_detection/backend/src/backend/models/: __init__.py  alert.py  rule.py  transaction.py  user.py
fraud_detection/backend/src/backend/schemas/: rule.py  transaction.py
fraud_detection/backend/src/backend/services/: anomaly_detector.py  azure_anomaly.py  cache.py  claude_explainer.py  risk_scorer.py  rule_engine.py
llm_security_gateway/: CLAUDE.md  README.md  cleanup.sh  deploy-azure.sh  docker-compose.prod.yml  docker-compose.yml
llm_security_gateway/backend/: .env.example  Dockerfile  README.md  pyproject.toml
llm_security_gateway/backend/src/backend/: __init__.py
llm_security_gateway/backend/src/backend/api/: dependencies.py
llm_security_gateway/backend/src/backend/api/middleware/: __init__.py  logging.py  rate_limit.py
llm_security_gateway/backend/src/backend/api/routes/: __init__.py  audit.py  chat.py  completions.py  health.py
llm_security_gateway/backend/src/backend/config/: policies.py  settings.py
llm_security_gateway/backend/src/backend/models/: __init__.py  audit.py  requests.py  security.py
llm_security_gateway/backend/src/backend/providers/: __init__.py  azure_ai_foundry.py  content_safety.py  router.py
llm_security_gateway/backend/src/backend/security/: __init__.py  content_filter.py  jailbreak_detector.py  pii_detector.py  prompt_injection.py  scanner.py  secret_scanner.py
llm_security_gateway/backend/src/backend/storage/: __init__.py  cosmos.py  redis.py
multi_model_routing/: .gitignore  cleanup.sh  (+3 more)
multi_model_routing/backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
multi_model_routing/backend/src/backend/: __init__.py
multi_model_routing/backend/src/backend/api/: __init__.py
multi_model_routing/backend/src/backend/api/routes/: __init__.py  analytics.py  budget.py  chat.py  health.py
multi_model_routing/backend/src/backend/budget/: __init__.py  controller.py
multi_model_routing/backend/src/backend/config/: __init__.py  model_config.py  settings.py
multi_model_routing/backend/src/backend/models/: __init__.py  requests.py  responses.py
multi_model_routing/backend/src/backend/providers/: __init__.py  anthropic.py  azure_foundry.py  azure_openai.py  base.py
multi_model_routing/backend/src/backend/routing/: __init__.py  complexity_analyzer.py  model_selector.py  router.py  semantic_router.py
multi_model_routing/backend/src/backend/storage/: __init__.py  cosmos_client.py  redis_client.py
travel-mcp-server/backend/: .env.example  Dockerfile  README.md  pyproject.toml
travel-mcp-server/backend/src/travel_mcp/: __init__.py  api.py  config.py  server.py
travel-mcp-server/backend/src/travel_mcp/prompts/: __init__.py  templates.py
travel-mcp-server/backend/src/travel_mcp/resources/: __init__.py  destinations.py
travel-mcp-server/backend/src/travel_mcp/services/: __init__.py  cache.py  http_client.py  llm.py
travel-mcp-server/backend/src/travel_mcp/tools/: __init__.py  currency.py  flights.py  hotels.py  places.py  planner.py  visa.py  weather.py
(+489 files in other folders)
