[project]
name = "finance-research-pipeline"
version = "0.1.0"
description = "Multi-agent Finance Research Pipeline using LangGraph"
readme = "README.md"
authors = [
    { name = "MinhQuanBuiSco", email = "quanbm2710@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "websockets>=14.0",
    "python-multipart>=0.0.9",

    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # Azure
    "azure-identity>=1.19.0",
    "azure-cosmos>=4.7.0",

    # Tools
    "tavily-python>=0.5.0",
    "yfinance>=0.2.40",
    "newsapi-python>=0.2.7",

    # Storage
    "redis>=5.2.0",
    "hiredis>=3.0.0",

    # PDF & Utils
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
